<resources>
    <string name="app_name">Clued</string>
    <string name="welcome_description">Clued is a quiz-based app that helps users distinguish between myths and life hacks by presenting real-life scenarios, giving instant feedback, and providing explanations.</string>
    <string name="welcome_into">Ever been confused whether what you\'re told is a myth or a life hack? Well…Clued is your solution!</string>
    <string-array name="quiz_topics">
        <item>HOUSEHOLD &amp; CLEANING</item>
        <item>HEALTH &amp; WELLNESS</item>
        <item>PRODUCTIVITY</item>
    </string-array>
    <string name="question_progress_format">Question %1$d of %2$d</string>
    <string name="results_score_format">%1$d / %2$d</string>
    <string name="txt_statement">STATEMENT</string>
    <string name="hack_or_myth_prompt">HACK OR MYTH?</string>
    <string name="btn_hack">HACK</string>
    <string name="btn_myth">MYTH</string>
    <string name="clued_logo_desc">Clued Logo</string>
    <string name="question_image_desc">Question Image</string>
    <string name="back_button_desc">Back</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="case_closed">CASE CLOSED!</string>
    <string name="your_score">YOUR SCORE</string>
    <string name="good_job_detective">GOOD JOB, DETECTIVE!</string>
    <string name="txt_correct">CORRECT</string>
    <string name="txt_incorrect">INCORRECT</string>
    <string name="btn_try_again">TRY AGAIN</string>
    <string name="btn_review_answers">REVIEW ANSWERS</string>
    <string name="btn_back_to_home">BACK TO HOME</string>
    <string name="detective_image_desc">Detective Image</string>
    <string name="score_placeholder">0</string>
    <string name="select_topic">SELECT A TOPIC</string>
    <string name="btn_begin_quiz">BEGIN QUIZ</string>
    <string name="topic_household_cleaning">HOUSEHOLD &amp; CLEANING</string>
    <string name="review_answers_title">REVIEW ANSWERS</string>
    <string name="question_number_format">QUESTION %1$d</string>
    <string name="you_answered_prefix">YOU ANSWERED: </string>
    <string name="correct_answer_prefix">CORRECT ANSWER: </string>
    <string name="explanation_prefix">EXPLANATION: </string>
    <string name="btn_back_to_results">BACK TO RESULTS</string>
    <string name="txt_true">TRUE</string>
    <string name="txt_false">FALSE</string>
</resources>